--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   .btn-cocktail,
   .btn-non-alcoholic,
   .btn-alcoholic,
-  .bookmark {
+  .bookmarked {
     height: 12rem !important;
   }
   input {
@@ -45,9 +45,7 @@ html {
 body {
   /* font-family: "Segoe UI"; */
   font-family: cursive;
-  /* background-color: #f7f7f7; */
   color: #f7f7f7;
-  background-color: #010a01;
   min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 2fr;
@@ -59,7 +57,6 @@ body {
   display: flex;
   flex-flow: column;
   align-items: center;
-
   grid-column: 2 / 2;
   grid-row: 2 / 8;
   border: #5271ff 0.1rem solid;
@@ -73,7 +70,7 @@ body {
   grid-column: 1 / 3;
   grid-row: 1 / 2;
 }
-.search_list {
+.search_result_container {
   display: flex;
   grid-column: 1 / 2;
   grid-row: 2 / 8;
@@ -97,6 +94,10 @@ body {
   background: #5271ff;
 }
 
+.search_list li{
+  display: flex;
+  flex-direction: column;
+}
 .search {
   display: flex;
   align-items: center;
@@ -114,6 +115,7 @@ body {
   border-top-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
   border: #5271ff 0.1rem solid;
+  border-collapse: collapse;
 }
 
 input {
@@ -252,7 +254,7 @@ p {
 
 .btn-cocktail:hover,
 .btn-non-alcoholic:hover,
-.bookmark:hover,
+.bookmarked:hover,
 .search-btn:hover {
   background-color: #5271ff;
 }
@@ -261,18 +263,48 @@ p {
   border-top-left-radius: 2rem;
   border-bottom-left-radius: 2rem;
 }
+.cocktail_illustration {
+  display: flex;
+}
 
-.bookmark {
+.bookmarked {
   border-top-right-radius: 2rem;
   border-bottom-right-radius: 2rem;
   margin-right: 1rem;
+}
+
+.bookmark_btn {
+  margin: 0 0 1rem 1rem;
+  display: flex;
+  color: white;
+  background-color: #000;
+  text-decoration: none;
+  border: 0.1rem solid #5271ff;
+  padding: 0.25rem;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
+/* .bookmark_btn a {
+  display: flex;
+  color: white;
+  background-color: #000;
+  text-decoration: none;
+  border: 0.1rem solid #5271ff;
+  padding: 0.25rem;
+  border-radius: 2rem;
+} */
+
+.bookmark_btn:hover {
+  background-color: #f7f7f7;
+  color: #000;
 }
 
 /* .btn-recipe, */
 .btn-cocktail,
 .btn-non-alcoholic,
 .btn-alcoholic,
-.bookmark {
+.bookmarked {
   /* font-family: "Vibur", cursive; */
   display: flex;
   justify-content: center;
