--- a/style.css
+++ b/style.css
@@ -94,9 +94,12 @@ body {
   background: #5271ff;
 }
 
-.search_list li{
+.search_list li {
   display: flex;
   flex-direction: column;
+  padding: 2rem 3.5rem;
+  border: 0.2rem solid white;
+  font-size: 1.8rem;
 }
 .search {
   display: flex;
