--- a/list.css
+++ b/list.css
@@ -13,7 +13,7 @@ body {
   position: absolute;
   right: 1.5rem;
   cursor: pointer;
-  /* display: inline-block; */
+  z-index: 10;
 }
 
 .close-btn_active:hover {
@@ -33,10 +33,8 @@ body {
   background-color: black;
   color: white;
   border: #5271ff 0.1rem solid;
-  /* border-top: 0; */
   width: 23rem;
   border-radius: 0.7rem;
-  margin-top: 1rem;
 }
 
 .bookmark_list {
@@ -49,17 +47,13 @@ body {
   border-radius: 30%;
 }
 
-.title_text {
-  font-size: 1.25rem;
-  margin: 1.2rem 0 0 1.2rem;
-  text-decoration: underline;
-}
-
-.bookmark_item {
+.bookmark_item,
+.list_item {
   list-style: none;
 }
 
-.bookmark_item:hover {
+.bookmark_item:hover,
+.list_item:hover {
   border: #5271ff 0.1rem solid;
   border-left: 0;
   border-right: 0;
@@ -72,15 +66,13 @@ body {
   text-decoration: none;
   cursor: pointer;
 }
-.delete{
-  /* text-transform: uppercase; */
-  padding: 0.1rem;
-  display: inline-block;
-  border: #5271ff 0.1rem solid;
-  border-radius: 2rem;
-  margin-bottom: 0.5rem;
-}
 
-.delete:hover{
-  background-color: red;
+.list_item_img {
+  width: 3rem;
+  height: auto;
+  border-radius: 30%;
+  margin-right: 1rem;
+}
+.list_item {
+  font-size: 1.5rem;
 }
