--- a/style.css
+++ b/style.css
@@ -12,29 +12,53 @@
   html {
     font-size: 62.5%;
   }
+
+  .neon-text-container {
+    height: 10rem !important;
+    width: auto;
+  }
 }
 
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 35%;
+    font-size: 25%;
     margin: 0;
     padding: 0;
   }
+  /* .btn-non-alcoholic, */
   .btn-cocktail,
-  .btn-non-alcoholic,
-  .btn-alcoholic,
   .bookmarked {
-    height: 12rem !important;
+    height: 13rem !important;
+    width: 17rem;
+  }
+
+  .btn-non-alcoholic {
+    display: none !important;
   }
   input {
-    width: 8rem;
+    width: 12rem !important;
     height: 11rem !important;
   }
   .search-btn {
     height: 11rem !important;
+    width: auto !important;
   }
   .cocktails {
     width: 75%;
+  }
+
+  .neon-text-container {
+    height: 9rem !important;
+    margin: auto !important;
+  }
+  h2 {
+    display: none;
+  }
+
+  .search_result_container,
+  .container {
+    height: 90rem !important;
+    width: auto;
   }
 }
 
@@ -43,7 +67,6 @@ html {
 }
 
 body {
-  /* font-family: "Segoe UI"; */
   font-family: cursive;
   color: #f7f7f7;
   min-height: 100vh;
@@ -61,15 +84,15 @@ body {
   grid-column: 2 / 2;
   grid-row: 2 / 8;
   border: #5271ff 0.1rem solid;
-  border-top: 0;
+  /* border-top: 0; */
   border-collapse: collapse;
+  margin-right: 1rem;
   background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
 }
 
 .header {
   display: flex;
   justify-content: space-around;
-
   grid-column: 1 / 3;
   grid-row: 1 / 2;
 }
@@ -77,10 +100,11 @@ body {
   display: flex;
   grid-column: 1 / 2;
   grid-row: 2 / 8;
-  height: 50rem; /* make this responsive! */
+  height: 72rem; /* make this responsive! */
   width: auto;
   border: #5271ff 0.1rem solid;
   border-collapse: collapse;
+  margin-left: 1rem;
   overflow: scroll;
   background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
 }
@@ -100,7 +124,7 @@ body {
 .search_list li {
   display: flex;
   flex-direction: column;
-  padding: 2rem 4rem;
+  padding: 2rem 3rem;
 }
 
 .search {
@@ -112,7 +136,7 @@ body {
   cursor: pointer;
   height: 4rem;
   width: 5rem;
-  margin-right: 1rem;
+  margin-right: 2rem;
   color: white;
   background-color: black;
   font-family: cursive;
