--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,9 @@
     height: 90rem !important;
     width: auto;
   }
+  .cocktails {
+    overflow: auto;
+  }
 }
 
 html {
@@ -112,7 +115,6 @@ body {
   border: #5271ff 0.1rem solid;
   border-collapse: collapse;
   margin-left: 1rem;
-  overflow: scroll;
   background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
 }
 
@@ -213,10 +215,10 @@ li {
 .cocktails {
   display: flex;
   font-size: 2rem;
-  /*opacity: 0;
- transition: opacity 1s; */
+  opacity: 0;
+  transition: opacity 1s;
   background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
-  overflow: scroll;
+  overflow: auto;
 }
 
 /* .recipe, */
