--- a/css/style.css
+++ b/css/style.css
@@ -116,6 +116,7 @@ body {
   border-collapse: collapse;
   margin-left: 1rem;
   background-image: url("https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png");
+  overflow: auto;
 }
 
 .custom-scroll::-webkit-scrollbar {
