--- a/css/style.css
+++ b/css/style.css
@@ -32,22 +32,26 @@
     padding: 0;
   }
 
-  .btn_non_alcoholic,
+  .btn_non_alcoholic {
+    display: none !important;
+  }
+  /* .btn_non_alcoholic,*/
   .btn_cocktail,
   .bookmarked {
     /* height: 13rem !important; */
     height: 3rem !important;
-    width: 9rem;
+    width: 15rem;
   }
   input {
     /* height: 11rem !important; */
     height: 3rem !important;
-    width: 12rem !important;
+    width: 10rem !important;
   }
   .search_btn {
     /* height: 11rem !important; */
     height: 3rem !important;
-    width: 4rem !important;
+    width: 5rem !important;
+    margin-right: 0.5rem !important;
   }
   .cocktails {
     width: 65%;
@@ -57,8 +61,11 @@
     height: 5rem !important;
     margin: auto !important;
   }
+  h2 {
+    display: none;
+  }
 
-  .search_result_container,
+  /* .search_result_container,
   .container {
     height: 60rem !important;
   }
@@ -70,7 +77,7 @@
   }
   .cocktails {
     overflow: auto;
-  }
+  } */
 }
 
 html {
