--- a/css/style.css
+++ b/css/style.css
@@ -27,70 +27,43 @@
 
 @media only screen and (max-width: 600px) {
   html {
-    font-size: 35%;
+    font-size: 45%;
     margin: 0;
     padding: 0;
   }
 
-  /* .btn_non_alcoholic {
-    display: none !important;
-  } */
   .btn_non_alcoholic,
   .btn_cocktail {
-    height: 13rem !important;
-    /* height: 10rem !important; */
-    width: 12rem;
+    min-height: 4rem;
+    min-width: 7rem;
   }
-  .bookmarked {
-    height: 13rem !important;
-    width: 5rem;
-  }
+
   input {
-    /* height: 11rem !important; */
-    height: 3rem !important;
-    width: 10rem !important;
+    min-height: 3rem !important;
+    min-width: 9rem !important;
   }
   .search_btn {
-    /* height: 11rem !important; */
-    height: 3rem !important;
-    width: 5rem !important;
+    min-height: 3rem !important;
+    min-width: 3rem !important;
     margin-right: 0.5rem !important;
   }
+
   .cocktails {
-    width: 65%;
+    max-width: 25rem;
   }
 
   .neon-text-container {
-    height: 5rem !important;
-    margin: 1rem !important;
+    max-height: 6rem !important;
   }
   h2 {
     display: none;
   }
-
-  /* .container,
-  .cocktails {
-    width: 80% !important;
-  } */
-  .nav {
-    width: 48rem;
+  .bookmarked-icon-nav {
+    padding: 0;
   }
-  /* .search_result_container{
-    margin-left: 10rem !important;
-  } */
-  /* .search_result_container,
-  .container {
-    height: 60rem !important;
+  .bookmarked {
+    width: 3rem;
   }
-  .container {
-    width: 40rem;
-  }
-  .search_result_container {
-    width: 20rem !important;
-  }
-  .cocktails {
-    overflow: auto;
-  } */
 }
 
 html {
@@ -112,7 +85,7 @@ body {
   font-size: 1.25rem;
 }
 .material-symbols-outlined {
-  font-size: 1.5rem !important;
+  font-size: 1.8rem !important;
 }
 .container {
   display: flex;
